--- a/index.html
+++ b/index.html
@@ -145,10 +145,10 @@
     </div>
     <!-- Aviso de Libros -->
     <section>
-      <div id="caja" class="m-auto text-center col-11">
-        <div id="borde" class="mt-5 container-fluid col-11">
-          <h1 class="pt-5 neon">!AVISO¡</h1>
-          <p class="pt-5 pb-5">
+      <div id="caja" class="m-auto text-center container-fluid col-11">
+        <div class="mt-5 container-fluid col-11">
+          <h1 class="pt-5 neon container-fluid">!AVISO¡</h1>
+          <p class="pt-5 pb-5 fs-3 ">
              SE LES COMUNICA A LOS PADRES DE FAMILIA <br>
           QUE NO PUEDAN ASISTIR POR MOTIVOS<br> 
           DE CAUSA MAYOR EL DÍA Y LA HORA SEÑALADA <br>
@@ -160,6 +160,22 @@
         </div>
       </div>
     </section>
+
+    <!--Libros primero -->
+    <div class="clearfix py-5"></div>
+    <div class="w-100 m-auto text-center">
+      <img id="video" class="col-8 col-xs-6 img-fluid" src="img/CALENDARIO LIBROS PRIMERO10241024_1.jpg" alt="">
+    </div>
+        <!--Libros segundos -->
+    <div class="clearfix py-5"></div>
+    <div class="w-100 m-auto text-center">
+      <img id="video" class="col-8 col-xs-6 img-fluid" src="img/ENTREGA DE LIBROS SEGUNDO GRADO_page-0001.jpg" alt="">
+    </div>
+        <!--Libros terceros -->
+    <div class="clearfix py-5"></div>
+    <div class="w-100 m-auto text-center">
+      <img id="video" class="col-8 col-xs-6 img-fluid" src="img/ENTREGA DE LIBROS TERCER GRADO_page-0001.jpg" alt="">
+    </div>
     <!-- formulario -->
     <div class="clearfix pt-5 "></div>
       <div id="usaer" class="text-center bg-dark text-white col-6 container-fluid">
