--- a/index.html
+++ b/index.html
@@ -162,18 +162,21 @@
     </section>
 
     <!--Libros primero -->
-    <div class="clearfix py-5"></div>
-    <div class="w-100 m-auto text-center">
+    <div  class="clearfix py-5"></div>
+    <div id="video" class="w-100 m-auto py-5 text-center">
+      <h2 class="fs-4 text-white">ENTREGA DE LIBROS A PRIMEROS</h2>
       <img id="video" class="col-8 col-xs-6 img-fluid" src="img/CALENDARIO LIBROS PRIMERO10241024_1.jpg" alt="">
     </div>
         <!--Libros segundos -->
     <div class="clearfix py-5"></div>
-    <div class="w-100 m-auto text-center">
+    <div id="video" class="w-100 m-auto py-5 text-center">
+      <h2 class="fs-4 text-white">ENTREGA DE LIBROS A PRIMEROS</h2>
       <img id="video" class="col-8 col-xs-6 img-fluid" src="img/ENTREGA DE LIBROS SEGUNDO GRADO_page-0001.jpg" alt="">
     </div>
         <!--Libros terceros -->
     <div class="clearfix py-5"></div>
-    <div class="w-100 m-auto text-center">
+    <div id="video" class="w-100 m-auto py-5 text-center">
+      <h2 class="fs-4 text-white">ENTREGA DE LIBROS A PRIMEROS</h2>
       <img id="video" class="col-8 col-xs-6 img-fluid" src="img/ENTREGA DE LIBROS TERCER GRADO_page-0001.jpg" alt="">
     </div>
     <!-- formulario -->
