--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
       </div>
     </div>
     <!-- video -->
-    <div class="m-auto w-100 pt-5 text-center ">
+    <div class="pt-5 m-auto text-center w-100 ">
       <video id="video" class="" src="videos/VID-20210830-WA0000.mp4" width="80%" height="80%" controls autoplay>
     </div>
     <!-- Aviso de Libros -->
@@ -163,25 +163,25 @@
 
     <!--Libros primero -->
     <div  class="clearfix py-5"></div>
-    <div id="video" class="w-100 m-auto py-5 text-center">
-      <h2 class="fs-4 text-white">ENTREGA DE LIBROS A PRIMEROS</h2>
+    <div id="video" class="py-5 m-auto text-center w-100">
+      <h2 class="text-white fs-4">ENTREGA DE LIBROS A PRIMEROS</h2>
       <img id="video" class="col-8 col-xs-6 img-fluid" src="img/CALENDARIO LIBROS PRIMERO10241024_1.jpg" alt="">
     </div>
         <!--Libros segundos -->
     <div class="clearfix py-5"></div>
-    <div id="video" class="w-100 m-auto py-5 text-center">
-      <h2 class="fs-4 text-white">ENTREGA DE LIBROS A PRIMEROS</h2>
+    <div id="video" class="py-5 m-auto text-center w-100">
+      <h2 class="text-white fs-4">ENTREGA DE LIBROS A PRIMEROS</h2>
       <img id="video" class="col-8 col-xs-6 img-fluid" src="img/ENTREGA DE LIBROS SEGUNDO GRADO_page-0001.jpg" alt="">
     </div>
         <!--Libros terceros -->
     <div class="clearfix py-5"></div>
-    <div id="video" class="w-100 m-auto py-5 text-center">
-      <h2 class="fs-4 text-white">ENTREGA DE LIBROS A PRIMEROS</h2>
+    <div id="video" class="py-5 m-auto text-center w-100">
+      <h2 class="text-white fs-4">ENTREGA DE LIBROS A PRIMEROS</h2>
       <img id="video" class="col-8 col-xs-6 img-fluid" src="img/ENTREGA DE LIBROS TERCER GRADO_page-0001.jpg" alt="">
     </div>
     <!-- formulario -->
     <div class="clearfix pt-5 "></div>
-      <div id="usaer" class="text-center bg-dark text-white col-6 container-fluid">
+      <div id="usaer" class="text-center text-white bg-dark col-8 col-xs-6 container-fluid">
         <h2 id="deteccion" class="fs-2 justify-content-center">DETECCÍON DE ALUMNOS DE NUEVO INGRESO PARA POSIBLE ATENCIÓN POR USAER <h2 class="fs-4">(Educacion Especial)</h2></h2>
         <p id="deteccion-parrafo" class="fs-4 fst-italic">
           Este formulario permitirá detectar a los alumnos que tienen alguna discapacidad y/o enfrentan alguna barrera para el aprendizaje y la participación o tienen alguna aptitud sobresaliente, así como aquellos que ya estaban siendo atendidos por maestra de apoyo (USAER) en la primaria y poder dar continuidad a su seguimiento.
@@ -225,11 +225,11 @@
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-          <span class="fs-1 pe-5 text-danger" aria-hidden="true"><</span>
+          <span class="fs-1 pe-3 text-danger" aria-hidden="true"><</span>
           <span class="visually-hidden d-block">Previous</span>
         </button>
         <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-          <span class=" fs-1 ps-5 text-danger" aria-hidden="true">></span>
+          <span class=" fs-1 ps-3 text-danger" aria-hidden="true">></span>
           <span class="visually-hidden d-block">Next</span>
         </button>
       </div>
