--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
     <link rel="stylesheet" href="estilo.css" />
   </head>
   <body>
-    <nav id="barra" class="fixed-top align-items-center navbar navbar-expand-lg navbar-dark">
+    <div id="particles-js"></div>
+    <nav id="barra" class="fixed-top navbar w-100 col-12 navbar-expand-lg navbar-dark">
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html">
-          <img
+          <img loading="lazy"
             class="text-white bg-body rounded-pill img-fluid align-content-start"
             src="img/log1.png"
             alt=""
@@ -131,7 +132,7 @@
     </nav>
     <div class="m-auto align-content-center col-12">
       <div id="banner" class="m-auto w-100 container-fluid">
-        <img
+        <img loading="lazy"
           id="fondo"
           class="m-auto img-fluid w-60 d-block"
           src="img/fondo21_edited.jpg"
@@ -140,10 +141,12 @@
       </div>
     </div>
     <!-- video -->
-    <div class="pt-5 m-auto text-center w-100 ">
-      <video id="video" class="" src="videos/VID-20210830-WA0000.mp4" width="80%" height="80%" controls autoplay>
+    <div class="py-5"></div>
+    <div class="py-5 m-auto text-center w-100 ">
+      <video loading="lazy" id="video" class="" src="videos/VID-20210830-WA0000.mp4" width="80%" height="80%" controls autoplay>
     </div>
     <!-- Aviso de Libros -->
+
     <section>
       <div id="caja" class="m-auto text-center container-fluid col-11">
         <div class="mt-5 container-fluid col-11">
@@ -165,19 +168,19 @@
     <div  class="clearfix py-5"></div>
     <div id="video" class="py-5 m-auto text-center w-100">
       <h2 class="text-white fs-2">ENTREGA DE LIBROS A PRIMEROS</h2>
-      <img id="video" class="col-8 col-xs-6 img-fluid" src="img/CALENDARIO LIBROS PRIMERO10241024_1.jpg" alt="">
+      <img loading="lazy" id="video" class="col-8 col-xs-6 img-fluid" src="img/CALENDARIO LIBROS PRIMERO10241024_1.jpg" alt="">
     </div>
         <!--Libros segundos -->
     <div class="clearfix py-5"></div>
     <div id="video" class="py-5 m-auto text-center w-100">
       <h2 class="text-white fs-2">ENTREGA DE LIBROS A PRIMEROS</h2>
-      <img id="video" class="col-8 col-xs-6 img-fluid" src="img/ENTREGA DE LIBROS SEGUNDO GRADO_page-0001.jpg" alt="">
+      <img loading="lazy" id="video" class="col-8 col-xs-6 img-fluid" src="img/ENTREGA DE LIBROS SEGUNDO GRADO_page-0001.jpg" alt="">
     </div>
         <!--Libros terceros -->
     <div class="clearfix py-5"></div>
     <div id="video" class="py-5 m-auto text-center w-100">
       <h2 class="text-white fs-2">ENTREGA DE LIBROS A PRIMEROS</h2>
-      <img id="video" class="col-8 col-xs-6 img-fluid" src="img/ENTREGA DE LIBROS TERCER GRADO_page-0001.jpg" alt="">
+      <img loading="lazy" id="video" class="col-8 col-xs-6 img-fluid" src="img/ENTREGA DE LIBROS TERCER GRADO_page-0001.jpg" alt="">
     </div>
     <!-- formulario -->
     <div class="clearfix pt-5 "></div>
@@ -197,14 +200,14 @@
     <div class="clearfix py-5"></div>
     <div id="entradas" class="container-fluid">
     <h1 class="pb-2 text-center text-white">ENTRADAS POR GRUPO</h1>
-    <img id="img-h-t" class="m-auto img-fluid h-100 col-8 col-xs-6 col-sm-11 col-md-8 col-lg-12 d-block " src="img/Diapositiva1.png" alt="">
+    <img loading="lazy" id="img-h-t" class="m-auto img-fluid h-100 col-8 col-xs-6 col-sm-11 col-md-8 col-lg-12 d-block " src="img/Diapositiva1.png" alt="">
     </div>
     <!-- TIPS -->
     <div class="clearfix py-4"></div>
-      <img id="img-h-t" class="m-auto img-fluid col-4 col-xs-6 col-sm-8 col-md-5 col-lg-6 d-block " src="img/tips.jpeg" alt="">
+      <img loading="lazy" id="img-h-t" class="m-auto img-fluid col-4 col-xs-6 col-sm-8 col-md-5 col-lg-6 d-block " src="img/tips.jpeg" alt="">
     <!-- Horarios -->
     <div id="horario-g" class="clearfix py-4"></div>
-      <img id="img-h-t" class="m-auto img-fluid col-4 col-xs-6 col-sm-8 col-md-6 col-lg-6 d-block" allowfullscreen="true" src="img/horarios1.jpeg" alt="">
+      <img loading="lazy" id="img-h-t" class="m-auto img-fluid col-4 col-xs-6 col-sm-8 col-md-6 col-lg-6 d-block" allowfullscreen="true" src="img/horarios1.jpeg" alt="">
       <!-- asesores -->
       <div class="clearfix py-4"></div>
       <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
@@ -215,13 +218,13 @@
         </div>
         <div id="asesores-1" class="carousel-inner">
           <div class="carousel-item active">
-            <img src="img/asesores1.jpeg" class="d-block w-100" alt="...">
+            <img loading="lazy" src="img/asesores1.jpeg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="img/asesores2.jpeg" class="d-block w-100" alt="...">
+            <img loading="lazy" src="img/asesores2.jpeg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="img/asesores3.jpeg" class="d-block w-100" alt="...">
+            <img loading="lazy" src="img/asesores3.jpeg" class="d-block w-100" alt="...">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -236,7 +239,7 @@
     <!-- MAPA -->
     <div class="clearfix pt-5 pb-5"></div>
     <div id="box-mapa" class="m-auto col col-11">
-      <iframe title="Tecnica51"
+      <iframe loading="lazy" title="Tecnica51"
         class="m-auto d-block col-12"
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3733.3964276552147!2d-101.35050268512299!3d20.653444786202854!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x842c7e26a24bd7fd%3A0x4940069d40176311!2sEscuela%20Secundaria%20T%C3%A9cnica%20No.%2051%2011DST0074F!5e0!3m2!1ses-419!2smx!4v1629965572687!5m2!1ses-419!2smx"
         height="450"
@@ -267,6 +270,8 @@
     <footer class="text-center fs-5">
       Desarrollado por Gabriel flores y José Raya © 2021
     </footer>
+    <script src="particles/particles.min.js"></script>
+    <script src="particles/app.js"></script>
     <script src="bootstrap/js/bootstrap.min.js"></script>
   </body>
 </html>
