--- a/index.html
+++ b/index.html
@@ -127,8 +127,10 @@
               </ul>
             </li>
           </ul>
+          
         </div>
       </div>
+
     </nav>
     <div class="m-auto align-content-center col-12">
       <div id="banner" class="m-auto w-100 container-fluid">
@@ -138,6 +140,7 @@
           src="img/fondo21_edited.jpg"
           alt=""
         />
+
       </div>
     </div>
     <!-- video -->
@@ -173,13 +176,13 @@
         <!--Libros segundos -->
     <div class="clearfix py-5"></div>
     <div id="video" class="py-5 m-auto text-center w-100">
-      <h2 class="text-white fs-2">ENTREGA DE LIBROS A PRIMEROS</h2>
+      <h2 class="text-white fs-2">ENTREGA DE LIBROS A SEGUNDOS</h2>
       <img loading="lazy" id="video" class="col-8 col-xs-6 img-fluid" src="img/ENTREGA DE LIBROS SEGUNDO GRADO_page-0001.jpg" alt="">
     </div>
         <!--Libros terceros -->
     <div class="clearfix py-5"></div>
     <div id="video" class="py-5 m-auto text-center w-100">
-      <h2 class="text-white fs-2">ENTREGA DE LIBROS A PRIMEROS</h2>
+      <h2 class="text-white fs-2">ENTREGA DE LIBROS A TERCEROS</h2>
       <img loading="lazy" id="video" class="col-8 col-xs-6 img-fluid" src="img/ENTREGA DE LIBROS TERCER GRADO_page-0001.jpg" alt="">
     </div>
     <!-- formulario -->
