--- a/maestros/index.html
+++ b/maestros/index.html
@@ -138,73 +138,73 @@
     <div id="carouselExampleFade1" class="carousel slide carousel-fade" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active" data-bs-interval="5000">
-          <img src="../tarjetas/t1.png" class="d-block m-auto col-xs-6" width="90%" height="480px" alt="...">
+          <img loading="lazy" src="../tarjetas/t1.png" class="d-block m-auto col-xs-6" width="90%" height="480px" alt="...">
         </div>
         <div class="carousel-item" data-bs-interval="5000">
-          <img src="../tarjetas/t2.png" class="d-block m-auto col-xs-6" width="90%" height="480px" alt="...">
+          <img loading="lazy" src="../tarjetas/t2.png" class="d-block m-auto col-xs-6" width="90%" height="480px" alt="...">
         </div>
         <div class="carousel-item" data-bs-interval="5000">
-          <img src="../tarjetas/t3.png" class="d-block m-auto col-xs-6" width="90%" height="480px" alt="...">
+          <img loading="lazy" src="../tarjetas/t3.png" class="d-block m-auto col-xs-6" width="90%" height="480px" alt="...">
         </div>
         <div class="carousel-item " data-bs-interval="5000">
-          <img src="../tarjetas/t4.png" class="d-block m-auto col-xs-6" width="90%" height="480px" alt="...">
+          <img loading="lazy" src="../tarjetas/t4.png" class="d-block m-auto col-xs-6" width="90%" height="480px" alt="...">
         </div>
         <div class="carousel-item " data-bs-interval="5000">
-          <img src="../tarjetas/t5.png" class="d-block m-auto col-xs-6" width="90%" height="480px" alt="...">
+          <img loading="lazy" src="../tarjetas/t5.png" class="d-block m-auto col-xs-6" width="90%" height="480px" alt="...">
         </div>
         <div class="carousel-item " data-bs-interval="5000">
-          <img src="../tarjetas/t6.png" class="d-block m-auto col-xs-6" width="90%" height="480px" alt="...">
+          <img loading="lazy" src="../tarjetas/t6.png" class="d-block m-auto col-xs-6" width="90%" height="480px" alt="...">
         </div>
         <div class="carousel-item " data-bs-interval="5000">
-          <img src="../tarjetas/t7.png" class="d-block m-auto col-xs-6" width="90%" height="480px" alt="...">
+          <img loading="lazy" src="../tarjetas/t7.png" class="d-block m-auto col-xs-6" width="90%" height="480px" alt="...">
         </div>
         <div class="carousel-item " data-bs-interval="5000">
-          <img src="../tarjetas/t8.png" class="d-block m-auto col-xs-6" width="90%" height="480px" alt="...">
+          <img loading="lazy" src="../tarjetas/t8.png" class="d-block m-auto col-xs-6" width="90%" height="480px" alt="...">
         </div>
         <div class="carousel-item " data-bs-interval="5000">
-          <img src="../tarjetas/t9.png" class="d-block m-auto col-xs-6" width="90%" height="480px" alt="...">
+          <img loading="lazy" src="../tarjetas/t9.png" class="d-block m-auto col-xs-6" width="90%" height="480px" alt="...">
         </div>
         <div class="carousel-item " data-bs-interval="5000">
-          <img src="../tarjetas/t10.png" class="d-block m-auto col-xs-6" width="90%" height="480px" alt="...">
+          <img loading="lazy" src="../tarjetas/t10.png" class="d-block m-auto col-xs-6" width="90%" height="480px" alt="...">
         </div>
         <div class="carousel-item " data-bs-interval="8000">
-          <img src="../tarjetas/t11.png" class="d-block m-auto col-xs-6" width="90%" height="480px" alt="...">
+          <img loading="lazy" src="../tarjetas/t11.png" class="d-block m-auto col-xs-6" width="90%" height="480px" alt="...">
         </div>
         <div class="carousel-item " data-bs-interval="5000">
-          <img src="../tarjetas/t12.png" class="d-block m-auto col-xs-6" width="90%" height="480px" alt="...">
+          <img loading="lazy" src="../tarjetas/t12.png" class="d-block m-auto col-xs-6" width="90%" height="480px" alt="...">
         </div>
         <div class="carousel-item " data-bs-interval="5000">
-          <img src="../tarjetas/t13.png" class="d-block m-auto col-xs-6" width="90%" height="480px" alt="...">
+          <img loading="lazy" src="../tarjetas/t13.png" class="d-block m-auto col-xs-6" width="90%" height="480px" alt="...">
         </div>
         <div class="carousel-item " data-bs-interval="5000">
-          <img src="../tarjetas/t14.png" class="d-block m-auto col-xs-6" width="90%" height="480px" alt="...">
+          <img loading="lazy" src="../tarjetas/t14.png" class="d-block m-auto col-xs-6" width="90%" height="480px" alt="...">
         </div>
         <div class="carousel-item " data-bs-interval="5000">
-          <img src="../tarjetas/t15.png" class="d-block m-auto col-xs-6" width="90%" height="480px" alt="...">
+          <img loading="lazy" src="../tarjetas/t15.png" class="d-block m-auto col-xs-6" width="90%" height="480px" alt="...">
         </div>
         <div class="carousel-item " data-bs-interval="5000">
-          <img src="../tarjetas/t16.png" class="d-block m-auto col-xs-6" width="90%" height="480px" alt="...">
+          <img loading="lazy" src="../tarjetas/t16.png" class="d-block m-auto col-xs-6" width="90%" height="480px" alt="...">
         </div>
         <div class="carousel-item " data-bs-interval="5000">
-          <img src="../tarjetas/t17.png" class="d-block m-auto col-xs-6" width="90%" height="480px" alt="...">
+          <img loading="lazy" src="../tarjetas/t17.png" class="d-block m-auto col-xs-6" width="90%" height="480px" alt="...">
         </div>
         <div class="carousel-item " data-bs-interval="5000">
-          <img src="../tarjetas/t18.png" class="d-block m-auto col-xs-6" width="90%" height="480px" alt="...">
+          <img loading="lazy" src="../tarjetas/t18.png" class="d-block m-auto col-xs-6" width="90%" height="480px" alt="...">
         </div>
         <div class="carousel-item " data-bs-interval="5000">
-          <img src="../tarjetas/t19.png" class="d-block m-auto col-xs-6" width="90%" height="480px" alt="...">
+          <img loading="lazy" src="../tarjetas/t19.png" class="d-block m-auto col-xs-6" width="90%" height="480px" alt="...">
         </div>
         <div class="carousel-item " data-bs-interval="5000">
-          <img src="../tarjetas/t20.png" class="d-block m-auto col-xs-6" width="90%" height="480px" alt="...">
+          <img loading="lazy" src="../tarjetas/t20.png" class="d-block m-auto col-xs-6" width="90%" height="480px" alt="...">
         </div>
         <div class="carousel-item " data-bs-interval="5000">
-          <img src="../tarjetas/t21.png" class="d-block m-auto col-xs-6" width="90%" height="480px" alt="...">
+          <img loading="lazy" src="../tarjetas/t21.png" class="d-block m-auto col-xs-6" width="90%" height="480px" alt="...">
         </div>
         <div class="carousel-item " data-bs-interval="5000">
-          <img src="../tarjetas/t22.png" class="d-block m-auto col-xs-6" width="90%" height="480px" alt="...">
+          <img loading="lazy" src="../tarjetas/t22.png" class="d-block m-auto col-xs-6" width="90%" height="480px" alt="...">
         </div>
         <div class="carousel-item " data-bs-interval="5000">
-          <img src="../tarjetas/t23.png" class="d-block m-auto col-xs-6" width="90%" height="480px" alt="...">
+          <img loading="lazy" src="../tarjetas/t23.png" class="d-block m-auto col-xs-6" width="90%" height="480px" alt="...">
         </div>
         
       </div>
@@ -224,49 +224,49 @@
     <div id="carouselExampleFade2" class="carousel slide carousel-fade" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active" data-bs-interval="5000">
-          <img src="../t-v/t-v1.jpeg" class="d-block m-auto col-xs-6" width="90%" height="480px" alt="...">
+          <img loading="lazy" src="../t-v/t-v1.jpeg" class="d-block m-auto col-xs-6" width="90%" height="480px" alt="...">
         </div>
         <div class="carousel-item" data-bs-interval="5000">
-          <img src="../t-v/t-v2.jpeg" class="d-block m-auto col-xs-6" width="90%" height="480px" alt="...">
+          <img loading="lazy" src="../t-v/t-v2.jpeg" class="d-block m-auto col-xs-6" width="90%" height="480px" alt="...">
         </div>
         <div class="carousel-item" data-bs-interval="5000">
-          <img src="../t-v/t-v3.png" class="d-block m-auto col-xs-6" width="90%" height="480px" alt="...">
+          <img loading="lazy" src="../t-v/t-v3.png" class="d-block m-auto col-xs-6" width="90%" height="480px" alt="...">
         </div>
         <div class="carousel-item" data-bs-interval="5000">
-          <img src="../t-v/t-v4.png" class="d-block m-auto col-xs-6" width="90%" height="480px" alt="...">
+          <img loading="lazy" src="../t-v/t-v4.png" class="d-block m-auto col-xs-6" width="90%" height="480px" alt="...">
         </div>
         <div class="carousel-item" data-bs-interval="5000">
-          <img src="../t-v/t-v5.png" class="d-block m-auto col-xs-6" width="90%" height="480px" alt="...">
+          <img loading="lazy" src="../t-v/t-v5.png" class="d-block m-auto col-xs-6" width="90%" height="480px" alt="...">
         </div>
         <div class="carousel-item" data-bs-interval="5000">
-          <img src="../t-v/t-v6.png" class="d-block m-auto col-xs-6" width="90%" height="480px" alt="...">
+          <img loading="lazy" src="../t-v/t-v6.png" class="d-block m-auto col-xs-6" width="90%" height="480px" alt="...">
         </div>
         <div class="carousel-item" data-bs-interval="5000">
-          <img src="../t-v/t-v7.png" class="d-block m-auto col-xs-6" width="90%" height="480px" alt="...">
+          <img loading="lazy" src="../t-v/t-v7.png" class="d-block m-auto col-xs-6" width="90%" height="480px" alt="...">
         </div>
         <div class="carousel-item" data-bs-interval="5000">
-          <img src="../t-v/t-v8.png" class="d-block m-auto col-xs-6" width="90%" height="480px" alt="...">
+          <img loading="lazy" src="../t-v/t-v8.png" class="d-block m-auto col-xs-6" width="90%" height="480px" alt="...">
         </div>
         <div class="carousel-item" data-bs-interval="5000">
-          <img src="../t-v/t-v9.png" class="d-block m-auto col-xs-6" width="90%" height="480px" alt="...">
+          <img loading="lazy" src="../t-v/t-v9.png" class="d-block m-auto col-xs-6" width="90%" height="480px" alt="...">
         </div>
         <div class="carousel-item" data-bs-interval="5000">
-          <img src="../t-v/t-v10.png" class="d-block m-auto col-xs-6" width="90%" height="480px" alt="...">
+          <img loading="lazy" src="../t-v/t-v10.png" class="d-block m-auto col-xs-6" width="90%" height="480px" alt="...">
         </div>
         <div class="carousel-item" data-bs-interval="5000">
-          <img src="../t-v/t-v11.png" class="d-block m-auto col-xs-6" width="90%" height="480px" alt="...">
+          <img loading="lazy" src="../t-v/t-v11.png" class="d-block m-auto col-xs-6" width="90%" height="480px" alt="...">
         </div>
         <div class="carousel-item" data-bs-interval="5000">
-          <img src="../t-v/t-v12.png" class="d-block m-auto col-xs-6" width="90%" height="480px" alt="...">
+          <img loading="lazy" src="../t-v/t-v12.png" class="d-block m-auto col-xs-6" width="90%" height="480px" alt="...">
         </div>
         <div class="carousel-item" data-bs-interval="5000">
-          <img src="../t-v/t-v13.png" class="d-block m-auto col-xs-6" width="90%" height="480px" alt="...">
+          <img loading="lazy" src="../t-v/t-v13.png" class="d-block m-auto col-xs-6" width="90%" height="480px" alt="...">
         </div>
         <div class="carousel-item" data-bs-interval="5000">
-          <img src="../t-v/t-v14.png" class="d-block m-auto col-xs-6" width="90%" height="480px" alt="...">
+          <img loading="lazy" src="../t-v/t-v14.png" class="d-block m-auto col-xs-6" width="90%" height="480px" alt="...">
         </div>
         <div class="carousel-item" data-bs-interval="5000">
-          <img src="../t-v/t-v15.png" class="d-block m-auto col-xs-6" width="90%" height="480px" alt="...">
+          <img loading="lazy" src="../t-v/t-v15.png" class="d-block m-auto col-xs-6" width="90%" height="480px" alt="...">
         </div>
       </div>
       <button class="carousel-control-prev pe-4" type="button" data-bs-target="#carouselExampleFade2" data-bs-slide="prev">
@@ -278,7 +278,7 @@
         <span class="visually-hidden">Next</span>
       </button>
     </div>
-    <div class="clearfix py-5"></div>
+    <div class="clearfix py-2"></div>
 
     <!-- btn-regresar -->
     <div>
