--- a/index.html
+++ b/index.html
@@ -152,9 +152,11 @@
       <video loading="lazy" id="video" class="" src="videos/welcome.mp4" width="80%" height="100%" controls autoplay>
     </div>
     <!-- maestros -->
-    <form id="col-xs-6" class="p-5 m-auto col-sm-6 col-md-4 col-lg-4 rounded-pill col-5" action="/maestros/index.html" >
-      <button class="p-2 text-light text-uppercase bg-warning rounded-pill col-12 fs-5 p-3" type="submit">Presentacion de Maestros</button>
-   </form>
+   <div class="text-center">
+    <a class="p-3 m-auto col-sm-6 col-md-4 col-lg-4 rounded-pill col-5" href="/maestros/index.html" >
+      <button class="p-3 btn text-light text-uppercase bg-success rounded-pill col-6 fs-5" type="submit">Presentacion de Maestros</button>
+    </a>
+  </div>
     <!-- Aviso de Libros -->
 
     <section>
@@ -228,20 +230,20 @@
         </div>
         <div id="asesores-1" class="carousel-inner">
           <div class="carousel-item active">
-            <img loading="lazy" src="img/asesores1.jpeg" class="d-block m-auto w-100" alt="...">
+            <img loading="lazy" src="img/asesores1.jpeg" class="m-auto d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img loading="lazy" src="img/asesores2.jpeg" class="d-block m-auto w-100" alt="...">
+            <img loading="lazy" src="img/asesores2.jpeg" class="m-auto d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img loading="lazy" src="img/asesores3.jpeg" class="d-block m-auto w-100" alt="...">
+            <img loading="lazy" src="img/asesores3.jpeg" class="m-auto d-block w-100" alt="...">
           </div>
         </div>
-        <button class="carousel-control-prev py-3" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+        <button class="py-3 carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
           <span class="carousel-control-prev-icon bg-dark" aria-hidden="true"></span>
           <span class="visually-hidden">Previous</span>
         </button>
-        <button class="carousel-control-next py-3" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+        <button class="py-3 carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
           <span class="carousel-control-next-icon bg-dark" aria-hidden="true"></span>
           <span class="visually-hidden">Next</span>
         </button>
@@ -253,14 +255,14 @@
         class="m-auto d-block col-12"
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3733.3964276552147!2d-101.35050268512299!3d20.653444786202854!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x842c7e26a24bd7fd%3A0x4940069d40176311!2sEscuela%20Secundaria%20T%C3%A9cnica%20No.%2051%2011DST0074F!5e0!3m2!1ses-419!2smx!4v1629965572687!5m2!1ses-419!2smx"
         height="450"
-        style="border: 0"
         allowfullscreen=""
         loading="lazy"
       ></iframe>
-    </div>
-      <form id="col-xs-6" class="p-5 m-auto col-sm-6 col-md-4 col-lg-4 rounded-pill col-5" action="https://goo.gl/maps/4C9qKqQCcTXw1VZcA" target="_blank">
-        <button class="p-2 text-white btn-outline-info bg-success rounded-pill col-12 fs-5 " type="submit">abrir mapa</button>
-     </form>
+      <div class="text-center">
+        <a class="p-3 m-auto col-sm-6 col-md-4 col-lg-4 rounded-pill col-5" href="https://goo.gl/maps/xvTcj9YT5kMGzTM98" target="_blank">
+          <button class="p-2 btn text-light text-uppercase bg-warning rounded-pill col-6 fs-5" type="submit">Abrir Mapa</button>
+        </a>
+      </div>
  
     <!--CONTACTO-->
     <div class="clearfix pt-3 pb-5"></div>
