--- a/maestros/index.html
+++ b/maestros/index.html
@@ -300,6 +300,7 @@
     
     <!-- vocales de la mañana -->
     <div class="clearfix py-5"></div>
+    <h2>VOCALES DEL TURNO MATUTINO</h2>
     <div class="text-center ">
       <table class="table m-auto caption-top table-dark table-striped table-hover table-bordered table-responsive w-75" >
         <caption class="text-center bg-light text-black-50 fs-4"><strong>VOCALES 1° MATUTINO</strong></caption>
@@ -417,9 +418,10 @@
 
           <!-- vocales de la tarde -->
           <div class="clearfix py-5"></div>
+          <h2>VOCALES DEL TURNO VESPERTINO</h2>
           <div class="text-center ">
             <table class="table m-auto caption-top table-dark table-striped table-hover table-bordered table-responsive w-75" >
-              <caption class="text-center bg-light text-black-50 fs-4"><strong>VOCALES 1° MATUTINO</strong></caption>
+              <caption class="text-center bg-light text-black-50 fs-4"><strong>VOCALES 1° VESPERTINO</strong></caption>
               <thead>
                 <tr>
                   <th class="fs-3">Nombre</th>
@@ -457,7 +459,7 @@
             <div  class="clearfix py-5"></div>
             <div class="text-center ">
               <table class="table m-auto caption-top table-dark table-striped table-hover table-bordered table-responsive w-75" >
-                <caption class="text-center bg-light text-black-50 fs-4"><strong>VOCALES 2° MATUTINO</strong></caption>
+                <caption class="text-center bg-light text-black-50 fs-4"><strong>VOCALES 2° VESPERTINO</strong></caption>
                 <thead>
                   <tr>
                     <th class="fs-3">Nombre</th>
@@ -495,7 +497,7 @@
               <div  class="clearfix py-5"></div>
               <div class="text-center ">
                 <table class="table m-auto caption-top table-dark table-striped table-hover table-bordered table-responsive w-75" >
-                  <caption class="text-center bg-light text-black-50 fs-4"><strong>VOCALES 3° MATUTINO</strong></caption>
+                  <caption class="text-center bg-light text-black-50 fs-4"><strong>VOCALES 3° VESPERTINO</strong></caption>
                   <thead>
                     <tr>
                       <th class="fs-3">Nombre</th>
