--- a/index.html
+++ b/index.html
@@ -129,8 +129,16 @@
                 </li>
               </ul>
             </li>
+            <li class="px-2 pt-1 nav-item dropdown">
+              <a
+                class="px-5 text-center text-white rounded-pill fs-4 nav-link  d-block bg-success"
+                href="maestros/index.html"
+                id="navbarDropdown"
+                role="button"
+              >
+                Horarios
+              </a>
           </ul>
-          
         </div>
       </div>
 
@@ -149,12 +157,12 @@
     <!-- video -->
     <div class="py-5"></div>
     <div class="py-5 m-auto text-center w-100 ">
-      <video loading="lazy" id="video" class="" src="videos/welcome.mp4" width="80%" height="100%" controls autoplay>
+      <video loading="lazy" id="video" class="col-xs-6" src="videos/welcome.mp4" width="80%" height="100%" controls poster="img/fondo21_edited.jpg">
     </div>
     <!-- maestros -->
    <div class="text-center">
-    <a class="p-3 m-auto col-sm-6 col-md-4 col-lg-4 rounded-pill col-5" href="/maestros/index.html" >
-      <button class="p-3 btn text-light text-uppercase bg-success rounded-pill col-6 fs-5" type="submit">Presentacion de Maestros</button>
+    <a class="p-3 m-auto col-sm-6 col-md-4 col-lg-4 rounded-pill col-4" href="/maestros/index.html" >
+      <button class="p-3 btn text-light text-uppercase bg-success rounded-pill col-4 fs-5" type="submit">Presentacion de Maestros</button>
     </a>
   </div>
     <!-- Aviso de Libros -->
@@ -258,14 +266,16 @@
         allowfullscreen=""
         loading="lazy"
       ></iframe>
-      <div class="text-center">
+    </div>
+      <div class="text-center pt-5">
         <a class="p-3 m-auto col-sm-6 col-md-4 col-lg-4 rounded-pill col-5" href="https://goo.gl/maps/xvTcj9YT5kMGzTM98" target="_blank">
           <button class="p-2 btn text-light text-uppercase bg-warning rounded-pill col-6 fs-5" type="submit">Abrir Mapa</button>
         </a>
       </div>
+    
  
     <!--CONTACTO-->
-    <div class="clearfix pt-3 pb-5"></div>
+    <div class="clearfix pt-2 pb-5"></div>
     <div id="cont" class="text-center text-white container-fluid">
       <h2 class="fs-1">Contáctanos</h2>
       <p class="fs-4 fst-italic">
