--- a/maestros/index.html
+++ b/maestros/index.html
@@ -79,7 +79,7 @@
                   aria-labelledby="navbarDropdown"
                 >
                   <li>
-                    <a class="text-white dropdown-item" href="/#asesores-1">Asesores</a>
+                    <a class="text-white dropdown-item" href="#asesores-1">Asesores</a>
                   </li>
                 </ul>
               </li>
@@ -535,8 +535,8 @@
       Desarrollado por Gabriel Flores y José Manuel Raya © 2021
     </footer>
 
-    <script src="../particles/particles.min.js"></script>
-    <script src="../particles/app1.js"></script>
+    <script src="particles/particles.min.js"></script>
+    <script src="particles/app.js"></script>
     <script src="../bootstrap/js/bootstrap.min.js"></script>
 </body>
 </html>
